--- a/index.html
+++ b/index.html
@@ -18,23 +18,19 @@
         .ver-btn { background: transparent; border: none; color: rgba(255,255,255,0.3); padding: 8px 18px; border-radius: 100px; font-size: 11px; cursor: pointer; transition: 0.4s; }
         .ver-btn.active { background: rgba(230, 187, 199, 0.15); color: var(--pink); }
         #chat-window { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 25px; max-width: 900px; margin: 0 auto; width: 100%; scrollbar-width: none; }
-        .msg { max-width: 85%; padding: 18px 24px; border-radius: 26px; line-height: 1.6; font-size: 15px; backdrop-filter: blur(var(--blur)); border: 1px solid var(--border); animation: slideUp 0.4s ease forwards; opacity: 1; }
+        .msg { max-width: 85%; padding: 18px 24px; border-radius: 26px; line-height: 1.6; font-size: 15px; backdrop-filter: blur(var(--blur)); border: 1px solid var(--border); animation: slideUp 0.4s ease forwards; }
         @keyframes slideUp { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
         .user { align-self: flex-end; background: rgba(230, 187, 199, 0.1); color: var(--pink); border-bottom-right-radius: 4px; }
         .ai { align-self: flex-start; background: var(--glass); border-bottom-left-radius: 4px; }
-        pre { background: #0d0d0d !important; padding: 16px; border-radius: 12px; overflow-x: auto; margin: 12px 0; border: 1px solid var(--border); }
-        code { font-family: 'Fira Code', monospace !important; font-size: 13px !important; }
-        .img-content { width: 100%; max-width: 400px; border-radius: 15px; margin-top: 10px; border: 1px solid var(--border); cursor: zoom-in; transition: 0.3s; display: block; }
-        .img-content.zoomed { transform: scale(1.1); cursor: zoom-out; position: relative; z-index: 50; }
+        .img-content { width: 100%; max-width: 400px; border-radius: 15px; margin-top: 10px; border: 1px solid var(--border); cursor: zoom-in; }
         .input-area { padding: 20px 20px 50px; max-width: 800px; margin: 0 auto; width: 100%; }
         #preview-box { display: none; padding: 10px; background: var(--glass); border: 1px solid var(--border); border-radius: 20px; margin-bottom: 10px; }
         #preview-box img { max-height: 80px; border-radius: 10px; }
         .input-container { background: var(--glass); border: 1px solid var(--border); border-radius: 100px; display: flex; align-items: center; padding: 8px 18px; backdrop-filter: blur(var(--blur)); }
         input { flex: 1; background: transparent; border: none; color: white; padding: 12px; outline: none; font-size: 15px; }
-        .icon-btn { background: transparent; border: none; color: var(--pink); cursor: pointer; display: flex; align-items: center; justify-content: center; transition: 0.3s; opacity: 0.4; }
-        .icon-btn svg { width: 22px; height: 22px; fill: var(--pink); }
+        .icon-btn { background: transparent; border: none; color: var(--pink); cursor: pointer; opacity: 0.4; transition: 0.3s; }
         .icon-btn.active { opacity: 1; transform: scale(1.1); }
-        .icon-btn.active svg { filter: drop-shadow(0 0 8px var(--pink-glow)); }
+        .icon-btn svg { width: 22px; height: 22px; fill: var(--pink); }
         .thinking .brand { animation: breathe 2s infinite; }
         @keyframes breathe { 50% { opacity: 0.3; } }
     </style>
@@ -75,10 +71,6 @@
             (val.length > 0 || pendingImgData) ? btn.classList.add('active') : btn.classList.remove('active');
         }
 
-        document.addEventListener('click', (e) => {
-            if (e.target.classList.contains('img-content')) e.target.classList.toggle('zoomed');
-        });
-
         function handleFile(input) {
             const file = input.files[0];
             if (file) {
@@ -96,53 +88,51 @@
         function addMessage(content, type, isImg = false) {
             const win = document.getElementById('chat-window'), div = document.createElement('div');
             div.className = `msg ${type}`;
-            const isUrl = typeof content === 'string' && content.startsWith('http') && !content.includes(' ');
-            if (isImg || isUrl) {
-                const img = document.createElement('img'); img.src = content; img.className = 'img-content'; div.appendChild(img);
+            if (isImg || (content.startsWith('http') && !content.includes(' '))) {
+                const img = document.createElement('img'); img.src = content; img.className = 'img-content';
+                img.onclick = () => img.classList.toggle('zoomed');
+                div.appendChild(img);
             } else {
-                if (type === 'ai') {
-                    div.innerHTML = marked.parse(content);
-                    div.querySelectorAll('pre code').forEach((block) => hljs.highlightElement(block));
-                } else {
-                    div.textContent = content.toLowerCase();
-                }
+                div.innerHTML = type === 'ai' ? marked.parse(content) : content.toLowerCase();
+                if (type === 'ai') div.querySelectorAll('pre code').forEach(el => hljs.highlightElement(el));
             }
             win.appendChild(div); win.scrollTo({ top: win.scrollHeight, behavior: 'smooth' });
         }
 
         async function send() {
-            const body = document.getElementById('main-body');
-            const input = document.getElementById('user-input');
-            const text = input.value.trim();
+            const input = document.getElementById('user-input'), text = input.value.trim();
             if (!text && !pendingImgData) return;
+
             if (text) addMessage(text, 'user', false);
             if (pendingImgData) addMessage(pendingImgData, 'user', true);
+
             const userText = text; input.value = ''; pendingImgData = null;
             document.getElementById('preview-box').style.display = 'none';
-            toggleGlow(); body.classList.add('thinking');
+            toggleGlow(); document.getElementById('main-body').classList.add('thinking');
 
             try {
                 const response = await fetch("/api/chat", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ 
-                        messages: [{role: "system", content: "your name is dubaaai. chill."} , ...chatHistory.slice(-5)],
+                        messages: [{role: "system", content: "your name is dubaaai. chill. lowercase."} , ...chatHistory.slice(-10)],
                         currentVer, 
                         text: userText 
                     })
                 });
                 const data = await response.json();
-                body.classList.remove('thinking');
+                document.getElementById('main-body').classList.remove('thinking');
+
                 if (data.isImage) {
                     addMessage(data.url, 'ai', true);
                 } else {
                     addMessage(data.content, 'ai');
-                    chatHistory.push({ role: "user", content: userText });
+                    chatHistory.push({ role: "user", content: userText || "sent image" });
                     chatHistory.push({ role: "assistant", content: data.content });
                 }
             } catch (e) {
-                body.classList.remove('thinking');
-                addMessage("bridge acting up.", 'ai');
+                document.getElementById('main-body').classList.remove('thinking');
+                addMessage("bridge is acting up.", 'ai');
             }
         }
         document.getElementById('user-input').onkeypress = (e) => { if(e.key === 'Enter') send(); };
