--- a/index.html
+++ b/index.html
@@ -3,227 +3,227 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dubaaai | admin-os</title>
+    <title>dubaaai</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&family=JetBrains+Mono:wght@100&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
+    <script src="https://kit.fontawesome.com/c42d640398.js" crossorigin="anonymous"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;600&family=JetBrains+Mono:wght@100&display=swap');
-
         :root {
             --pink: #e6bbc7;
-            --pink-glow: rgba(230, 187, 199, 0.4);
-            --border: rgba(255, 255, 255, 0.05);
-            --bg: #010101;
-            --grid-color: rgba(230, 187, 199, 0.03);
+            --white-pink: #fdf2f5;
+            --glass: rgba(255, 255, 255, 0.02);
+            --border: rgba(255, 255, 255, 0.08);
+            --bg: #020202;
+            --grid: rgba(230, 187, 199, 0.03);
         }
 
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Inter', sans-serif; cursor: none; }
-        
-        body { 
-            background-color: var(--bg); 
-            color: white; 
-            min-height: 100vh; 
-            display: flex; 
-            align-items: center; 
-            justify-content: center; 
-            overflow: hidden; 
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Poppins', sans-serif; -webkit-font-smoothing: antialiased; }
+        body { background: var(--bg); color: white; overflow-x: hidden; min-height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; }
+
+        /* Tactical Grid Background */
+        .background {
+            position: fixed; inset: 0; z-index: -1;
+            background: linear-gradient(90deg, var(--grid) 1px, transparent 1px),
+                        linear-gradient(var(--grid) 1px, transparent 1px);
+            background-size: 60px 60px;
         }
 
-        /* --- THE DYNAMIC GRID BACKGROUND --- */
-        .background-container {
-            position: fixed;
-            inset: 0;
-            z-index: -1;
-            background: 
-                linear-gradient(90deg, var(--grid-color) 1px, transparent 1px),
-                linear-gradient(var(--grid-color) 1px, transparent 1px);
-            background-size: 50px 50px;
-            background-position: center;
-        }
-
-        /* Moving Mouse Spotlight */
-        #spotlight {
-            position: fixed;
-            inset: 0;
-            background: radial-gradient(circle 400px at var(--x, 50%) var(--y, 50%), rgba(230, 187, 199, 0.08), transparent 80%);
-            z-index: -1;
+        .spotlight {
+            position: fixed; inset: 0; z-index: -1;
+            background: radial-gradient(circle 500px at var(--x, 50%) var(--y, 50%), rgba(230, 187, 199, 0.05), transparent 80%);
             pointer-events: none;
         }
 
-        /* Custom Cursor */
-        #cursor {
-            width: 8px; height: 8px; background: var(--pink); border-radius: 50%;
-            position: fixed; pointer-events: none; z-index: 9999;
-            box-shadow: 0 0 15px var(--pink); transition: transform 0.1s;
+        /* Main Bio Card */
+        .main-card {
+            width: 450px; background: var(--glass); backdrop-filter: blur(25px);
+            border: 1px solid var(--border); border-radius: 30px; padding: 40px;
+            text-align: center; box-shadow: 0 40px 100px rgba(0,0,0,0.5);
+            transition: 0.5s ease;
         }
 
-        /* --- THE LOGIN GATE --- */
-        #login-gate {
-            width: 450px; padding: 60px 40px;
-            background: rgba(2, 2, 2, 0.6);
-            backdrop-filter: blur(20px);
-            border: 1px solid var(--border);
-            border-radius: 20px;
-            text-align: center;
-            z-index: 100;
-            transition: all 1s cubic-bezier(0.16, 1, 0.3, 1);
-            box-shadow: 0 0 50px rgba(0,0,0,0.5);
+        /* Gradient Name */
+        .name {
+            font-size: 38px; font-weight: 600; letter-spacing: -1px;
+            background: linear-gradient(to bottom, #fff, var(--pink));
+            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
+            margin-bottom: 5px;
         }
 
-        .gate-title { 
-            font-family: 'JetBrains Mono', monospace;
-            font-size: 10px; letter-spacing: 12px; color: var(--pink); 
-            text-transform: uppercase; margin-bottom: 40px; opacity: 0.6; 
+        .roles { font-size: 13px; height: 20px; color: rgba(255,255,255,0.4); font-weight: 200; }
+
+        /* Roblox Widget */
+        .roblox-card {
+            margin-top: 25px; padding: 15px; background: rgba(0,0,0,0.2);
+            border: 1px solid var(--border); border-radius: 20px;
+            display: flex; align-items: center; gap: 15px; text-align: left;
         }
-        
-        .pass-input {
-            width: 100%; background: rgba(255,255,255,0.02); border: 1px solid var(--border);
-            padding: 18px; border-radius: 5px; color: white; text-align: center;
-            font-size: 14px; font-weight: 200; outline: none; transition: 0.5s;
-            margin-bottom: 25px; font-family: 'JetBrains Mono', monospace;
+        .roblox-img { width: 60px; height: 60px; border-radius: 50%; background: #111; }
+
+        /* Music Player */
+        .player {
+            margin-top: 20px; display: flex; align-items: center; justify-content: center; gap: 20px;
+            color: var(--pink); font-size: 18px;
         }
+        .player i { cursor: pointer; transition: 0.3s; opacity: 0.7; }
+        .player i:hover { opacity: 1; transform: scale(1.2); text-shadow: 0 0 10px var(--pink-glow); }
 
-        .pass-input:focus { border-color: var(--pink); box-shadow: 0 0 20px rgba(230, 187, 199, 0.1); }
+        /* Socials */
+        .socials { display: flex; justify-content: center; gap: 20px; margin-top: 30px; }
+        .socials a { color: white; font-size: 20px; opacity: 0.4; transition: 0.3s; text-decoration: none; }
+        .socials a:hover { opacity: 1; color: var(--pink); }
 
-        .auth-btn {
-            background: transparent; color: var(--pink); border: 1px solid var(--pink);
-            padding: 12px 40px; border-radius: 2px; font-size: 10px; letter-spacing: 4px;
-            cursor: pointer; transition: 0.4s; font-weight: 600; text-transform: uppercase;
+        /* Visit Counter */
+        .visits { position: fixed; top: 20px; left: 20px; font-size: 9px; letter-spacing: 2px; color: #333; }
+
+        /* Bottom Right Lock */
+        .admin-trigger {
+            position: fixed; bottom: 30px; right: 30px;
+            color: var(--pink); font-size: 18px; cursor: pointer;
+            opacity: 0.3; transition: 0.3s;
         }
+        .admin-trigger:hover { opacity: 1; transform: rotate(15deg); }
 
-        .auth-btn:hover { background: var(--pink); color: black; box-shadow: 0 0 30px var(--pink-glow); }
+        /* Animations */
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+        .animate { animation: fadeIn 1s ease forwards; }
 
-        /* --- MAIN HUB --- */
-        #admin-hub {
-            display: none; width: 92%; max-width: 1200px; height: 85vh;
-            flex-direction: column; opacity: 0; transform: translateY(30px);
-            transition: 1.5s cubic-bezier(0.16, 1, 0.3, 1);
-        }
-
-        .header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 40px; }
-        .header h1 { font-family: 'JetBrains Mono', monospace; font-size: 12px; letter-spacing: 8px; color: var(--pink); text-transform: uppercase; opacity: 0.8; }
-
-        .grid { display: grid; grid-template-columns: 1.8fr 1fr; gap: 30px; height: 100%; }
-
-        .panel {
-            background: rgba(2, 2, 2, 0.4); backdrop-filter: blur(40px);
-            border: 1px solid var(--border); border-radius: 15px;
-            padding: 40px; position: relative;
-            transform-style: preserve-3d;
-        }
-
-        .label { font-size: 9px; color: #444; letter-spacing: 3px; text-transform: uppercase; margin-bottom: 20px; font-family: 'JetBrains Mono', monospace; }
-
-        .drop-area {
-            width: 100%; height: 250px; border: 1px dashed rgba(230,187,199,0.1);
-            border-radius: 10px; display: flex; align-items: center; justify-content: center;
-            transition: 0.3s;
-        }
-
-        #ping { font-family: 'JetBrains Mono', monospace; text-shadow: 0 0 20px var(--pink-glow); }
-
-        /* Animation for successful login */
-        .scanline {
-            width: 100%; height: 100px; background: linear-gradient(to bottom, transparent, rgba(230, 187, 199, 0.05), transparent);
-            position: fixed; top: -100px; left: 0; z-index: 10; pointer-events: none;
-            animation: scan 4s linear infinite;
-        }
-
-        @keyframes scan { 0% { top: -100px; } 100% { top: 100vh; } }
+        #yt-player { position: absolute; top: -1000px; left: -1000px; pointer-events: none; }
     </style>
 </head>
 <body>
 
-    <div class="background-container"></div>
-    <div id="spotlight"></div>
-    <div id="cursor"></div>
-    <div class="scanline"></div>
+    <div class="background"></div>
+    <div class="spotlight"></div>
+    <div class="visits">VISITS: <span id="count">1</span></div>
 
-    <div id="login-gate" data-tilt data-tilt-max="5" data-tilt-glare data-tilt-max-glare="0.1">
-        <div class="gate-title">System // Locked</div>
-        <input type="password" id="pass-field" class="pass-input" placeholder="ACCESS KEY">
-        <button class="auth-btn" onclick="authorize()">Unlock</button>
-    </div>
+    <div class="main-card animate" data-tilt data-tilt-max="3" data-tilt-glare data-tilt-max-glare="0.1">
+        <div class="name">dubaaai</div>
+        <div class="roles" id="role-text">CEO @ voxex</div>
 
-    <div id="admin-hub">
-        <div class="header">
-            <h1>dubaaai / admin-os</h1>
-            <div style="font-family: 'JetBrains Mono', monospace; font-size: 9px; color: #333;">SECURED_SESSION_ACTIVE</div>
-        </div>
-
-        <div class="grid">
-            <div class="panel" data-tilt data-tilt-max="2" data-tilt-speed="400" data-tilt-perspective="1000">
-                <div class="label">CDN_CRYSTALLIZER</div>
-                <div class="drop-area" id="drop-area" ondrop="handleDrop(event)" ondragover="event.preventDefault()">
-                    <div id="status-text" style="font-size: 11px; color: #555; text-align: center; font-family: 'JetBrains Mono';">
-                        READY_FOR_DEPLOYMENT
-                    </div>
-                </div>
-                <input type="text" id="gh-token" class="pass-input" style="margin-top:25px; font-size:10px;" placeholder="GITHUB_AUTH_TOKEN">
-            </div>
-
-            <div style="display: flex; flex-direction: column; gap: 30px;">
-                <div class="panel" data-tilt data-tilt-max="4" style="flex: 1;">
-                    <div class="label">Notes_Vault</div>
-                    <textarea style="width:100%; height:80%; background:transparent; border:none; color:white; font-size:13px; font-weight:200; outline:none; resize:none; font-family: 'JetBrains Mono';" placeholder="> Initializing..."></textarea>
-                </div>
-                <div class="panel" data-tilt data-tilt-max="10" style="flex: 0.4; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-                    <div class="label">System_Latency</div>
-                    <div id="ping" style="font-size: 42px; font-weight: 100; color: var(--pink);">22ms</div>
-                </div>
+        <div class="roblox-card">
+            <img class="roblox-img" src="https://www.roblox.com/headshot-thumbnail/image?userId=1600295422&width=420&height=420&format=png" alt="roblox">
+            <div>
+                <div style="font-size: 12px; font-weight: 600;">@9dvxn</div>
+                <div style="font-size: 10px; opacity: 0.4;">playing roblox</div>
             </div>
         </div>
+
+        <div style="margin-top: 15px; display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
+            <div class="roblox-card" style="padding: 10px; font-size: 10px;">
+                <i class="fab fa-discord" style="color: #7289da;"></i> Server ID: 1441...
+            </div>
+            <div class="roblox-card" style="padding: 10px; font-size: 10px;">
+                <i class="fas fa-user-shield"></i> Bio: 7805...
+            </div>
+        </div>
+
+        <div class="player">
+            <i class="fas fa-step-backward" onclick="prevTrack()"></i>
+            <i class="fas fa-play" id="play-pause" onclick="togglePlay()"></i>
+            <i class="fas fa-step-forward" onclick="nextTrack()"></i>
+        </div>
+
+        <div class="socials">
+            <a href="https://discord.com/users/780580976500670494" target="_blank"><i class="fab fa-discord"></i></a>
+            <a href="https://www.instagram.com/champagnedubai/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.tiktok.com/@9dvxn" target="_blank"><i class="fab fa-tiktok"></i></a>
+        </div>
     </div>
+
+    <div class="admin-trigger" onclick="initiateAdmin()">
+        <i class="fas fa-lock"></i>
+    </div>
+
+    <div id="yt-player"></div>
 
     <script>
-        const KEY = "dubaaaismegasupersussypassthatdefinetelynobodtwilleverfigureoutcuziamfuckinghimlmaooooooooahiga";
+        // Role Rotation
+        const roles = ["CEO @ voxex", "Co Executive @ Judah's Customs", "Coordination @ Cloud Customs", "Owner @ dubai's commission hub"];
+        let roleIdx = 0;
+        setInterval(() => {
+            const el = document.getElementById('role-text');
+            el.style.opacity = 0;
+            setTimeout(() => {
+                roleIdx = (roleIdx + 1) % roles.length;
+                el.innerText = roles[roleIdx];
+                el.style.opacity = 1;
+            }, 500);
+        }, 3000);
 
-        // Mouse Tracker for Spotlight & Cursor
-        document.addEventListener('mousemove', e => {
-            document.body.style.setProperty('--x', e.clientX + 'px');
-            document.body.style.setProperty('--y', e.clientY + 'px');
-            const cursor = document.getElementById('cursor');
-            cursor.style.left = e.clientX + 'px';
-            cursor.style.top = e.clientY + 'px';
-        });
+        // Visit Counter
+        let count = localStorage.getItem('site_visits') || 0;
+        count++;
+        localStorage.setItem('site_visits', count);
+        document.getElementById('count').innerText = count;
 
-        function authorize() {
-            const input = document.getElementById('pass-field').value;
-            const gate = document.getElementById('login-gate');
-            const hub = document.getElementById('admin-hub');
+        // Music Logic
+        const tracks = ["CdqEe3k1ohc", "WstYC1BH6VQ", "KDtavDy71A0"];
+        let trackIdx = 0;
+        let player;
 
-            if (input === KEY) {
-                gate.style.opacity = '0';
-                gate.style.transform = 'scale(1.1) rotateX(10deg)';
-                setTimeout(() => {
-                    gate.style.display = 'none';
-                    hub.style.display = 'flex';
-                    setTimeout(() => {
-                        hub.style.opacity = '1';
-                        hub.style.transform = 'translateY(0)';
-                    }, 50);
-                }, 1000);
-                setInterval(() => {
-                    let ms = Math.floor(Math.random() * 5) + 15;
-                    document.getElementById('ping').innerText = `${ms}ms`;
-                }, 3000);
+        function onYouTubeIframeAPIReady() {
+            player = new YT.Player('yt-player', {
+                height: '0', width: '0',
+                videoId: tracks[trackIdx],
+                playerVars: { 'autoplay': 1, 'controls': 0 },
+                events: { 'onStateChange': onPlayerStateChange }
+            });
+        }
+
+        function togglePlay() {
+            const icon = document.getElementById('play-pause');
+            if (player.getPlayerState() === 1) {
+                player.pauseVideo();
+                icon.className = "fas fa-play";
             } else {
-                gate.style.animation = 'shake 0.4s';
-                setTimeout(() => gate.style.animation = '', 400);
+                player.playVideo();
+                icon.className = "fas fa-pause";
             }
         }
 
-        // Add shake animation to CSS
-        const style = document.createElement('style');
-        style.innerHTML = `@keyframes shake { 0%, 100% {transform: translateX(0);} 25% {transform: translateX(-10px);} 75% {transform: translateX(10px);} }`;
-        document.head.appendChild(style);
+        function nextTrack() {
+            trackIdx = (trackIdx + 1) % tracks.length;
+            player.loadVideoById(tracks[trackIdx]);
+        }
 
-        // Allow 'Enter' key
-        document.getElementById('pass-field').addEventListener('keypress', (e) => {
-            if (e.key === 'Enter') authorize();
+        function prevTrack() {
+            trackIdx = (trackIdx - 1 + tracks.length) % tracks.length;
+            player.loadVideoById(tracks[trackIdx]);
+        }
+
+        function onPlayerStateChange(event) {
+            if (event.data === 0) nextTrack(); // Auto-skip to next
+        }
+
+        // Mouse Tracker
+        document.addEventListener('mousemove', e => {
+            document.body.style.setProperty('--x', e.clientX + 'px');
+            document.body.style.setProperty('--y', e.clientY + 'px');
         });
 
-        // Initialize Tilt on everything with the attribute
+        // Admin Trigger (Your Password/Passkey System)
+        async function initiateAdmin() {
+            const pass = prompt("SECURE_GATE // ACCESS_KEY:");
+            if(pass === "dubaaaismegasupersussypassthatdefinetelynobodtwilleverfigureoutcuziamfuckinghimlmaooooooooahiga") {
+                try {
+                    const challenge = new Uint8Array(32);
+                    window.crypto.getRandomValues(challenge);
+                    await navigator.credentials.create({
+                        publicKey: {
+                            challenge, rp: { name: "dubaaai hub" },
+                            user: { id: Uint8Array.from("1", c => c.charCodeAt(0)), name: "dubaaai", displayName: "dubaaai" },
+                            pubKeyCredParams: [{ alg: -7, type: "public-key" }],
+                            authenticatorSelection: { authenticatorAttachment: "platform" }
+                        }
+                    });
+                    alert("Admin Hub Unlocked (Redirecting...)");
+                } catch(e) { alert("PASSKEY_FAILED"); }
+            }
+        }
+
         VanillaTilt.init(document.querySelectorAll("[data-tilt]"));
     </script>
+    <script src="https://www.youtube.com/iframe_api"></script>
 </body>
 </html>
