--- a/index.html
+++ b/index.html
@@ -1,117 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Judah's Customs</title>
-<link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
-<style>
-  /* RESET & BASE */
-  * { margin: 0; padding: 0; box-sizing: border-box; }
-  body { font-family: 'Share Tech Mono', monospace; background: #0a0a0a; color: #f0f0f0; overflow-x: hidden; }
-  a { color: inherit; text-decoration: none; }
-  html { scroll-behavior: smooth; }
-
-  /* CURSOR */
-  body { cursor: none; }
-  .cursor { width: 20px; height: 20px; border: 2px solid #f0c674; border-radius: 50%; position: fixed; transform: translate(-50%, -50%); pointer-events: none; transition: 0.1s ease; mix-blend-mode: difference; z-index: 9999; }
-
-  /* SECTIONS */
-  section { min-height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; position: relative; padding: 2rem; }
-  section h1, section h2 { color: #f0c674; }
-  section p { color: #ccc; max-width: 700px; margin: 1rem auto; line-height: 1.5rem; }
-
-  /* HERO */
-  #hero { display: flex; flex-direction: column; justify-content: center; align-items: center; background: linear-gradient(135deg,#111,#222); overflow: hidden; }
-  #hero h1 { font-size: 4rem; margin-bottom: 1rem; }
-  #hero p { font-size: 1.2rem; margin-bottom: 2rem; }
-  #hero a { border: 1px solid #f0c674; padding: 0.8rem 2rem; border-radius: 5px; transition: all 0.3s; }
-  #hero a:hover { background: #f0c674; color: #000; }
-
-  /* ABOUT */
-  #about { background: #0a0a0a; }
-  #about h2 { font-size: 3rem; margin-bottom: 1rem; }
-  #about p { font-size: 1.1rem; }
-
-  /* GALLERY */
-  #gallery { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; width: 90%; max-width: 1200px; }
-  #gallery img { width: 100%; border-radius: 8px; transition: transform 0.3s ease, box-shadow 0.3s ease; cursor: pointer; }
-  #gallery img:hover { transform: scale(1.05); box-shadow: 0 0 20px #f0c674; }
-
-  /* CONTACT */
-  #contact { display: flex; flex-direction: column; align-items: center; gap: 1rem; background: #0a0a0a; }
-  #contact a { border: 1px solid #f0c674; padding: 0.5rem 1.5rem; border-radius: 5px; transition: all 0.3s; }
-  #contact a:hover { background: #f0c674; color: #000; }
-
-  /* FOOTER */
-  footer { text-align: center; padding: 1rem; color: #555; font-size: 0.9rem; }
-
-  /* SCROLL ANIMATIONS */
-  section { opacity: 0; transform: translateY(50px); transition: all 1s ease; }
-  section.visible { opacity: 1; transform: translateY(0); }
-
-  /* NEON ACCENTS */
-  h1, h2 { text-shadow: 0 0 8px #f0c674, 0 0 16px #f0c674; }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Judah's Customs | Bringing your vision to life</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <style>
+        body { background-color: #050505; color: white; font-family: 'Inter', sans-serif; }
+        .blue-glow { box-shadow: 0 0 20px rgba(24, 124, 244, 0.2); }
+        .glass { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.05); }
+        .accent-text { color: #187cf4; }
+        .btn-primary { background-color: #187cf4; transition: 0.3s; }
+        .btn-primary:hover { background-color: #1466c9; transform: translateY(-2px); }
+    </style>
 </head>
 <body>
 
-<div class="cursor"></div>
+    <nav class="flex justify-between items-center px-8 py-6 max-w-7xl mx-auto">
+        <div class="text-2xl font-bold tracking-tighter">JUDAH'S <span class="accent-text">CUSTOMS</span></div>
+        <div class="hidden md:flex space-x-8 text-sm font-medium text-gray-400">
+            <a href="#" class="hover:text-white transition">Home</a>
+            <a href="#features" class="hover:text-white transition">Services</a>
+            <a href="https://discord.gg/judah" class="hover:text-white transition">Discord</a>
+        </div>
+        <a href="mailto:contact@jcustoms.org" class="glass px-5 py-2 rounded-full text-sm border border-white/10 hover:bg-white/5 transition">Contact</a>
+    </nav>
 
-<!-- HERO -->
-<section id="hero" class="visible">
-  <h1>Judah's Customs</h1>
-  <p>Custom designs, built your way.</p>
-  <a href="#gallery">See Work</a>
-</section>
+    <section class="flex flex-col items-center justify-center text-center py-24 px-4">
+        <div class="inline-block px-4 py-1.5 mb-6 text-xs font-semibold tracking-widest uppercase bg-blue-500/10 text-[#187cf4] rounded-full border border-blue-500/20">
+            Now Accepting New Commissions
+        </div>
+        <h1 class="text-5xl md:text-7xl font-extrabold mb-6 tracking-tight">
+            Bringing your <span class="accent-text">vision</span> to life.
+        </h1>
+        <p class="text-gray-400 max-w-2xl text-lg mb-10">
+            High-quality custom development, assets, and unique digital solutions tailored specifically to your needs. If you can dream it, we can build it.
+        </p>
+        <div class="flex flex-col md:flex-row gap-4">
+            <a href="https://discord.gg/judah" class="btn-primary px-8 py-4 rounded-xl font-bold flex items-center justify-center gap-2">
+                <i class="fab fa-discord"></i> Join Discord
+            </a>
+            <a href="#features" class="glass px-8 py-4 rounded-xl font-bold hover:bg-white/5 transition">
+                View Services
+            </a>
+        </div>
+    </section>
 
-<!-- ABOUT -->
-<section id="about">
-  <h2>What we do</h2>
-  <p>We craft custom designs with precision and style. From concept to creation, every piece is built to stand out.</p>
-</section>
+    <section id="features" class="max-w-7xl mx-auto px-8 py-20">
+        <div class="grid md:grid-cols-3 gap-6">
+            <div class="glass p-8 rounded-2xl hover:border-blue-500/50 transition-all duration-500">
+                <div class="w-12 h-12 bg-blue-500/20 rounded-lg flex items-center justify-center mb-6">
+                    <i class="fas fa-code accent-text text-xl"></i>
+                </div>
+                <h3 class="text-xl font-bold mb-3">Custom Dev</h3>
+                <p class="text-gray-400 leading-relaxed">Tailor-made scripts and applications optimized for performance and scalability.</p>
+            </div>
+            <div class="glass p-8 rounded-2xl hover:border-blue-500/50 transition-all duration-500">
+                <div class="w-12 h-12 bg-blue-500/20 rounded-lg flex items-center justify-center mb-6">
+                    <i class="fas fa-paint-brush accent-text text-xl"></i>
+                </div>
+                <h3 class="text-xl font-bold mb-3">Unique Design</h3>
+                <p class="text-gray-400 leading-relaxed">Clean, modern aesthetics that ensure your brand stands out from the competition.</p>
+            </div>
+            <div class="glass p-8 rounded-2xl hover:border-blue-500/50 transition-all duration-500">
+                <div class="w-12 h-12 bg-blue-500/20 rounded-lg flex items-center justify-center mb-6">
+                    <i class="fas fa-bolt accent-text text-xl"></i>
+                </div>
+                <h3 class="text-xl font-bold mb-3">Fast Delivery</h3>
+                <p class="text-gray-400 leading-relaxed">Rapid turnaround times without compromising on the quality of the final product.</p>
+            </div>
+        </div>
+    </section>
 
-<!-- GALLERY -->
-<section id="gallery">
-  <img src="https://media.discordapp.net/attachments/1302425103006564467/1468764172929208391/v3.png?width=1042&height=313" alt="work 1">
-  <img src="https://media.discordapp.net/attachments/1302425103006564467/1468763501144051732/ERLC_OA_Banners.png?width=1042&height=313" alt="work 2">
-  <img src="https://media.discordapp.net/attachments/1461546579159945321/1462135543390277643/image.png?width=817&height=290" alt="work 3">
-  <img src="https://media.discordapp.net/attachments/1461546579159945321/1465610895072694365/image.png?width=876&height=340" alt="work 4">
-</section>
+    <section class="max-w-5xl mx-auto px-8 py-20">
+        <div class="glass rounded-3xl p-12 text-center relative overflow-hidden">
+            <div class="absolute top-0 left-0 w-full h-1 bg-[#187cf4]"></div>
+            <h2 class="text-3xl font-bold mb-4">Ready to elevate your project?</h2>
+            <p class="text-gray-400 mb-8">Join over 1,500 members in our community and get a quote today.</p>
+            <div class="flex justify-center gap-6">
+                <a href="mailto:contact@jcustoms.org" class="text-gray-300 hover:text-[#187cf4] transition">contact@jcustoms.org</a>
+            </div>
+        </div>
+    </section>
 
-<!-- CONTACT -->
-<section id="contact">
-  <h2>Get in touch</h2>
-  <p>Contact us within Discord, or email us directly.</p>
-  <div>
-    <a href="mailto:contact@judahscustoms.com">email</a>
-    <a href="https://discord.com/users/1044686997194805280">judah</a>
-    <a href="https://discord.gg/judah">discord</a>
-  </div>
-</section>
-
-<!-- FOOTER -->
-<footer>&copy; 2026 Judah's Customs</footer>
-
-<script>
-  // scroll reveal
-  const sections = document.querySelectorAll('section');
-  const revealOnScroll = () => {
-    sections.forEach(sec => {
-      const top = sec.getBoundingClientRect().top;
-      if(top < window.innerHeight - 100) sec.classList.add('visible');
-    });
-  };
-  window.addEventListener('scroll', revealOnScroll);
-  revealOnScroll();
-
-  // custom cursor
-  const cursor = document.querySelector('.cursor');
-  document.addEventListener('mousemove', e => {
-    cursor.style.top = e.clientY + 'px';
-    cursor.style.left = e.clientX + 'px';
-  });
-</script>
+    <footer class="py-10 text-center text-gray-500 text-sm border-t border-white/5">
+        <p>&copy; 2026 Judah's Customs. All rights reserved.</p>
+    </footer>
 
 </body>
 </html>
