--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <nav class="flex justify-between items-center px-10 py-8 max-w-7xl mx-auto relative z-10">
         <div class="text-2xl font-extrabold tracking-tighter cursor-pointer" onclick="showPage('home')">JUDAH<span class="text-[#187cf4]">.</span></div>
         <div class="hidden md:flex space-x-10 text-[11px] uppercase tracking-[0.3em] font-bold text-gray-400">
-            <button onclick="showPage('home')" class="hover:text-white transition">Home</button>
-            <button onclick="showPage('work')" class="hover:text-white transition">Work</button>
-            <button onclick="showPage('courses')" class="hover:text-white transition">Courses</button>
+            <button onclick="showPage('home')" class="hover:text-white transition">HOME</button>
+            <button onclick="showPage('work')" class="hover:text-white transition">WORK</button>
+            <button onclick="showPage('courses')" class="hover:text-white transition">COURSES</button>
             <a href="https://discord.gg/judah" target="_blank" class="hover:text-white transition">Discord</a>
         </div>
         <button onclick="handleContact()" class="glass-card px-6 py-2 rounded-full text-xs font-bold uppercase tracking-widest hover:bg-[#187cf4] transition-all">Contact</button>
