--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         </div>
         
         <div class="hidden lg:flex space-x-10 text-[11px] uppercase tracking-[0.3em] font-bold text-gray-400">
-            <button onclick="showPage('home')" class="hover:text-white transition hover:drop-shadow-[0_0_8px_white]">Home</button>
-            <button onclick="showPage('work')" class="hover:text-white transition hover:drop-shadow-[0_0_8px_white]">Work</button>
-            <button onclick="showPage('courses')" class="hover:text-white transition hover:drop-shadow-[0_0_8px_white]">Courses</button>
+            <button onclick="showPage('home')" class="hover:text-white transition hover:drop-shadow-[0_0_8px_white]">HOME</button>
+            <button onclick="showPage('work')" class="hover:text-white transition hover:drop-shadow-[0_0_8px_white]">WORK</button>
+            <button onclick="showPage('courses')" class="hover:text-white transition hover:drop-shadow-[0_0_8px_white]">COURSES</button>
             <a href="https://discord.gg/judah" target="_blank" class="hover:text-white transition hover:drop-shadow-[0_0_8px_white]">Discord</a>
         </div>
 
